--- a/wallet/res/values/strings_help.xml
+++ b/wallet/res/values/strings_help.xml
@@ -4,11 +4,11 @@
 	<string name="help_wallet">
 <![CDATA[
 		<p>
-			The upper left part of the screen displays your selected Solcoin address that other people need to know in order to send you Solcoins.
+			The upper left part of the screen displays your selected GanjaCoin address that other people need to know in order to send you Solcoins.
 			Tap to change the address.
 		</p>
 		<p>
-			The QR code on the right contains your Solcoin address and can be used for scanning by another party.
+			The QR code on the right contains your GanjaCoin address and can be used for scanning by another party.
 			Tap on the QR code to get a larger version of it.
 		</p>
 		<p>
@@ -31,15 +31,15 @@
 	<string name="help_request_coins">
 <![CDATA[
 		<p>
-			Using this dialog, you can request coins from another person (who should already have installed Solcoin Wallet).
+			Using this dialog, you can request coins from another person (who should already have installed GanjaCoin Wallet).
 		</p>
 		<p>
-			First, you can enter an amount of Solcoins to request.
+			First, you can enter an amount of GanjaCoins to request.
 		</p>
 		<p>
 			Then, you either have the generated QR code scanned by the other person.
 			Or, you can send your request to a remote person with the share button in the action bar.
-			The other person will have to click the Solcoin URL.
+			The other person will have to click the GanjaCoin URL.
 		</p>
 		<p>
 			Either way, the other person will be presented a dialog for sending coins with all fields pre-populated.
@@ -51,15 +51,15 @@
 <![CDATA[
 		<p>
 			You have initiated the process of sending coins.
-			You came here either through the main screen or by clicking on a Solcoin URL in your mobile browser.
+			You came here either through the main screen or by clicking on a GanjaCoin URL in your mobile browser.
 		</p>
 		<p>
-			First, you enter the Solcoin address to pay to.
+			First, you enter the GanjaCoin address to pay to.
 			The address will autocomplete from known entries in your address book.
-			You can also scan QR codes with Solcoin addresses or Solcoin requests by pressing the QR button in the action bar.
+			You can also scan QR codes with GanjaCoin addresses or GanjaCoin requests by pressing the QR button in the action bar.
 		</p>
 		<p>
-			Next, you can see how many Solcoins you can spend at the moment.
+			Next, you can see how many GanjaCoins you can spend at the moment.
 			Any difference to the balance from the main screen is still unconfirmed and can thus not yet be spent.
 		</p>
 		<p>
@@ -67,7 +67,7 @@
 		</p>
 		<p>
 			You can enter a payment while being offline.
-			It will be sent on next restart of Solcoin Wallet.
+			It will be sent on next restart of GanjaCoin Wallet.
 			If you want a payment to be processed as fast as possible, make sure you are well connected (i.e. on a WLAN).
 		</p>
 		<p>
@@ -83,7 +83,7 @@
 			<b>Important safety notes:</b>
 		</p>
 		<p>
-			Solcoins are stored on the device.
+			GanjaCoins are stored on the device.
 			<b>If you lose it, you\'ll lose your Solcoins.</b>
 		</p>
 		<p>
@@ -92,12 +92,12 @@
 			Keep your backup safe and remember the password.
 		</p>
 		<p>
-			<b>Before uninstalling</b> (or clearing app data/wiping your device), <b>transfer your Solcoins to another wallet</b>.
-			Remaining Solcoins will be lost.
+			<b>Before uninstalling</b> (or clearing app data/wiping your device), <b>transfer your GanjaCoins to another wallet</b>.
+			Remaining GanjaCoins will be lost.
 		</p>
 		<p>
 			<b>Payments are irreversible</b>.
-			If you send your Solcoins into the void, there is almost no way to get them back.
+			If you send your GanjaCoins into the void, there is almost no way to get them back.
 		</p>
 		<p>
 			<b>Keep your mobile device safe!</b>
