--- a/wallet/res/values/values.xml
+++ b/wallet/res/values/values.xml
@@ -4,7 +4,7 @@
 	<string name="symbol_to">→</string>
 	<string name="symbol_from">←</string>
 	<string name="symbol_internal">⇄</string>
-	<string name="app_name">Solcoin</string>
+	<string name="app_name">GanjaCoin</string>
 
 
 
@@ -16,11 +16,11 @@
 		<item>0/6</item>
 	</string-array>
 	<string-array name="preferences_precision_labels">
-		<item>SOL, 8 digits</item>
-		<item>SOL, 6 digits</item>
-		<item>SOL, 4 digits</item>
-		<item>mSOL, 2 digits</item>
-		<item>µSOL, no digits</item>
+		<item>420G, 8 digits</item>
+		<item>420G, 6 digits</item>
+		<item>420G, 4 digits</item>
+		<item>m420G, 2 digits</item>
+		<item>µ420G, no digits</item>
 	</string-array>
 
 </resources>
